# dibble

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dioxus.toml  README.md  pyproject.toml  rustfmt.toml
.github/workflows/: ci.yml
assets/: tailwind.css
assets/styling/: bottom_tab_bar.css  bottom_tab_layout.css
docs/: roadmap.md
docs/spec/: 0.0.0_scaffolding.md  0.1.0_navigation_foundation.md
src/components/: mod.rs
tests/: __init__.py  test_dioxus_app.py  test_example.py
